=== NoNa ===
== Version 1.8.1 ==
Changelog: April 23, 2013
= Code =
* Added constant 'NONA_HOME_URL'
* Used 'NONA_HOME_URL' where appropriate

= CSS =
* Adjusted `img` and 'caption' related properties

/** ------------------------------------------------------------------------- */
== Version 1.8 ==
Changelog: March 15, 2013
= Code =
* Added code block termination comments
* Changed conditional to use `is_multisite` for Multisite testing
* Move Comment Reply script enqueue to 'functions.php'
* Refactored code formatting
* Refactored no post title code
* Refactored to be more i18n compatible
* Refactored widget area definitions into `nona_widgets` function and attached to `widgets_init` action hook
* Remove 'searchform.php' template in favor of using WordPress core version
* Updated DOCTYPE and other related header elements

= CSS =
* Minor adjustments to handle default widgets (based on the "Monster" widget)
* Minor adjustment to handle default 'searchform' output

= Miscellaneous =
* Deprecate `nona_login`, recommend using plugin BNS Login instead.
* Update "WordPress Required Version" to 3.4

/** ------------------------------------------------------------------------- */
== Version 1.7 ==
Changelog: December 10, 2012
= Code =
* Fixed spacing issue in meta details if post has no tags
* Refactored sidebar definitions to include names and descriptions for all areas
* Refactored `wp_nav_menu` support code

= Miscellaneous =
* PHPDocs style documentation updates and additions
* Minor change to output text in 'NoNa Theme Version'

/** ------------------------------------------------------------------------- */
== Version 1.6 ==
Changelog: July 10, 2012
= Code =
* Added `nona_wp_title` to be used with `wp_title` filter
* Removed deprecated function call to `add_custom_background`
* Removed deprecated function call to `get_theme_data`
* Updated post to post navigation in 'single.php'

= CSS =
* Miscellaneous minor style changes
* Styles for default widgets updated
