@@ -102,10 +102,8 @@ $curauth = ( get_query_var( 'author_name ') )
                     </div><!-- .post-details -->
 
                     <?php
-                    if ( has_post_thumbnail() ) {
-                        the_post_thumbnail( 'thumbnail', array( 'class' => 'alignleft' ) );
-                    } /** End if - has post thumbnail */
-
+                    nona_show_featured_image( 'full' );
+                    
                     if ( $count == 1 ) {
                         the_content( __( 'Read more... ', 'nona' ) ); ?>
                         <div class="clear"></div><!-- For inserted media at the end of the post -->
